# OhanaAI

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  IMPROVEMENTS.md  README-MLOps.md  README.md  add_images.sh  config.yaml  deploy.sh  drizzle.config.ts  mlops_config.yaml  package-lock.json  package.json  pyproject.toml  requirements-mlops.txt  requirements-vercel.txt  requirements.txt  requirements_m1.txt  run_mlops.py  run_training_tf.py  setup_ml_environment.sh  test_mlops.py  test_setup.py  train_model.py  train_model_m1.py  training_config.json  tsconfig.json  vercel.json
app/: layout.tsx  page.tsx
app/api/auth/register/: route.ts
app/api/gedcom/[id]/: route.ts
app/api/gedcom/upload/: route.ts
app/api/ml/export-training-data/: route.ts
app/api/ml/export-user-data/: route.ts
app/api/ml/predict/: route.ts
app/auth/signin/: page.tsx
app/auth/signup/: page.tsx
app/dashboard/: page.tsx
app/family-tree/[id]/: page.tsx
components/dashboard/: FileList.tsx  FileUpload.tsx
components/family-tree/: FamilyTreeViewer.tsx
components/ui/: Features.tsx  Hero.tsx  Navbar.tsx
frontend/: package-lock.json  package.json
frontend/src/: App.js  FanChart.js  gedcom-parser.js
ohana_ai/: __init__.py  data_deduplication.py  gedcom_parser.py  gnn_model.py  gnn_model_tf.py  graph_builder.py  gui.py  main.py  predictor.py  trainer.py  trainer_tf.py
ohana_ai/api/: __init__.py  auth.py  gedcom_parser.py  models.py  server.py
ohana_ai/core/: __init__.py  config.py  exceptions.py
ohana_ai/mlops/: __init__.py  database.py  monitoring.py  pipeline.py  storage.py  triggers.py  versioning.py
scripts/: auto_train.py
types/: next-auth.d.ts
